@@ -11,21 +11,21 @@
 		<script src="../../js/pattern-overrider.js"></script>
 	</head>
 	<body class="sg-pattern-list">
-		
+
 		<!-- Style Guide Main Content -->
 		<div class="sg-main" role="main">
-			
+
 			<!-- Patterns -->
 			<div id="sg-patterns">
 				{{# partials }}
 					<div class="sg-pattern">
-						<h2 class="sg-pattern-head" ><a href="../../patterns/{{ patternLink }}" class="patternLink {{# patternState }}sg-pattern-state {{ . }}{{/ patternState }}" data-patternpartial="{{ patternPartialPath }}">{{ patternName }}</a></h2>
+						<h2 class="sg-pattern-head" ><a href="../../patterns/{{ patternLink }}" class="patternLink {{# patternState }}sg-pattern-state {{ . }}{{/ patternState }}" data-patternpartial="{{ patternPartialPath }}">{{ patternDisplayName }}</a></h2>
 						<div class="sg-pattern-body">
 							{{{ patternPartial }}}
 							<div class="sg-code" style="display: none">
 								{{# patternLineageExists }}
 									<div class="sg-code-contains">
-										This pattern contains: 
+										This pattern contains:
 										{{# patternLineages }}
 											<a href="{{ lineagePath }}"><code>{{ lineagePattern }}</code><a>
 										{{/ patternLineages }}
@@ -50,7 +50,7 @@
 					</div>
 				{{/ partials }}
 			</div> <!--end #sg-patterns-->
-			
+
 		</div><!--End Style Guide Main Content-->
 
 		<!-- JS to hook everything together and do annotations -->
@@ -65,6 +65,6 @@
 		<script src="../../styleguide/js/postmessage.js"></script>
 		<script src="../../data/annotations.js"></script>
 		<script src="../../styleguide/js/annotations-pattern.js"></script>
-		<script src="../../styleguide/js/code-pattern.js"></script>		
+		<script src="../../styleguide/js/code-pattern.js"></script>
 	</body>
 </html>
