@@ -17,7 +17,6 @@
     "glob": "^5.0.5",
     "gulp": "^3.9.0",
     "gulp-eslint": "^1.0.0",
-    "gulp-exec": "^2.1.1",
     "gulp-gh-pages": "^0.5.2",
     "gulp-htmlhint": "^0.3.0",
     "gulp-htmllint": "0.0.5",
