@@ -1,5 +1,5 @@
 /* 
- * patternlab-node - v0.12.0 - 2015 
+ * patternlab-node - v0.13.0 - 2015 
  * 
  * Brian Muenzenmeyer, and the web community.
  * Licensed under the MIT license. 
@@ -17,7 +17,10 @@
     this.subdir = subdir;
     this.name = subdir.replace(/[\/\\]/g, '-') + '-' + this.fileName; //this is the unique name with the subDir
     this.jsonFileData = data || {};
-    this.patternName = this.fileName.replace(/^\d*\-/, ''); //this is the display name for the ui. strip numeric + hyphen prefixes
+    this.patternName = this.fileName.replace(/^\d*\-/, '');
+    this.patternDisplayName = this.patternName.split('-').reduce(function(val, working){
+      return val.charAt(0).toUpperCase() + val.slice(1) + ' ' + working.charAt(0).toUpperCase() + working.slice(1);
+    }, '').trim(); //this is the display name for the ui. strip numeric + hyphen prefixes
     this.patternLink = this.name + '/' + this.name + '.html';
     this.patternGroup = this.name.substring(this.name.indexOf('-') + 1, this.name.indexOf('-', 4) + 1 - this.name.indexOf('-') + 1);
     this.patternSubGroup = subdir.substring(subdir.indexOf('/') + 4);
@@ -33,7 +36,9 @@
 
   var oBucket = function(name){
     this.bucketNameLC = name;
-    this.bucketNameUC = name.charAt(0).toUpperCase() + name.slice(1);
+    this.bucketNameUC = name.split('-').reduce(function(val, working){
+      return val.charAt(0).toUpperCase() + val.slice(1) + ' ' + working.charAt(0).toUpperCase() + working.slice(1);
+    }, '').trim();
     this.navItems = [];
     this.navItemsIndex = [];
     this.patternItems = [];
@@ -42,7 +47,9 @@
 
   var oNavItem = function(name){
     this.sectionNameLC = name;
-    this.sectionNameUC = name.charAt(0).toUpperCase() + name.slice(1);
+    this.sectionNameUC = name.split('-').reduce(function(val, working){
+      return val.charAt(0).toUpperCase() + val.slice(1) + ' ' + working.charAt(0).toUpperCase() + working.slice(1);
+    }, '').trim();
     this.navSubItems = [];
     this.navSubItemsIndex = [];
   };
@@ -50,7 +57,9 @@
   var oNavSubItem = function(name){
     this.patternPath = '';
     this.patternPartial = '';
-    this.patternName = name.charAt(0).toUpperCase() + name.slice(1);
+    this.patternName = name.split(' ').reduce(function(val, working){
+      return val.charAt(0).toUpperCase() + val.slice(1) + ' ' + working.charAt(0).toUpperCase() + working.slice(1);
+    }, '').trim();
   };
 
   module.exports = {
