@@ -1,5 +1,5 @@
 /* 
- * patternlab-node - v0.12.0 - 2015 
+ * patternlab-node - v0.13.0 - 2015 
  * 
  * Brian Muenzenmeyer, and the web community.
  * Licensed under the MIT license. 
@@ -113,7 +113,9 @@
       try {
         var jsonFilename = patternlab.config.patterns.source + currentPattern.subdir + '/' + currentPattern.fileName  + ".json";
         currentPattern.jsonFileData = fs.readJSONSync(jsonFilename.substring(2));
-        console.log('found pattern-specific data.json for ' + currentPattern.key);
+        if(patternlab.config.debug){
+          console.log('found pattern-specific data.json for ' + currentPattern.key);
+        }
       }
       catch(e) {
       }
@@ -122,10 +124,12 @@
       try {
         var listJsonFileName = patternlab.config.patterns.source + currentPattern.subdir + '/' + currentPattern.fileName  + ".listitems.json";
         currentPattern.patternSpecificListJson = fs.readJSONSync(listJsonFileName.substring(2));
-        console.log('found pattern-specific listitems.json for ' + currentPattern.key);
+        if(patternlab.config.debug){
+          console.log('found pattern-specific listitems.json for ' + currentPattern.key);
+        }
       }
       catch(e) {
-      }      
+      }
 
       //add the raw template to memory
       currentPattern.template = fs.readFileSync(file, 'utf8');
