@@ -1,10 +1,10 @@
-/*
- * patternlab-node - v0.12.0 - 2015
- *
+/* 
+ * patternlab-node - v0.13.0 - 2015 
+ * 
  * Brian Muenzenmeyer, and the web community.
- * Licensed under the MIT license.
- *
- * Many thanks to Brad Frost and Dave Olsen for inspiration, encouragement, and advice.
+ * Licensed under the MIT license. 
+ * 
+ * Many thanks to Brad Frost and Dave Olsen for inspiration, encouragement, and advice. 
  *
  */
 
@@ -217,7 +217,8 @@ var patternlab_engine = function () {
         patternlab.viewAllPaths[bucketName] = {};
 
         //get the navItem
-        var navItemName = pattern.subdir.split('-').pop();
+        var navItemName = pattern.subdir.split('/').pop();
+        navItemName = navItemName.replace(/(\d).(-)/g, '');
 
         //get the navSubItem
         var navSubItemName = pattern.patternName.replace(/-/g, ' ');
