@@ -1,29 +1,0 @@
-{
-  "name": "patternlab-node",
-  "description": "Pattern Lab is a collection of tools to help you create atomic design systems. This is the node command line interface (CLI).",
-  "version": "0.12.0",
-  "devDependencies": {
-    "diveSync": "^0.2.1",
-    "fs-extra": "^0.24.0",
-    "glob": "^4.3.5",
-    "html-entities": "^1.1.1",
-    "mustache": "^1.0.0"
-  },
-  "keywords": [
-    "Pattern Lab",
-    "Atomic Web Design",
-    "Node",
-    "Javascript"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/pattern-lab/patternlab-node.git"
-  },
-  "author": "Brian Muenzenmeyer",
-  "license": "MIT",
-  "scripts": {
-  },
-  "engines": {
-    "node": ">=0.1"
-  }
-}
